FIX Style label pays en colonnes alignees

--- a/src/styles/components/_countries.scss
+++ b/src/styles/components/_countries.scss
@@ -11,6 +11,16 @@
     color: $white;
     box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.452);
 
+    @media screen and (max-width: 600px) {
+      flex-direction: column; 
+
+      li {
+        @media screen and (max-width: 600px) {
+          width: 200px;
+      }
+      }
+  }
+
     input {
       transform: translateY(1px);
     }
@@ -18,6 +28,10 @@
     label {
       margin-left: 10px;
       cursor: pointer;
+      @media screen and (max-width: 600px) {
+        display: inline-block;
+        width: 100px;
+    }
     }
   }
   input[type="text"] {
@@ -57,4 +71,5 @@
     flex-wrap: wrap;
     justify-content: center;
   }
+
 }
