--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -125,6 +125,21 @@ p {
           box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.452);
 }
 
+@media screen and (max-width: 600px) {
+  .countries .radio-container {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+@media screen and (max-width: 600px) and (max-width: 600px) {
+  .countries .radio-container li {
+    width: 200px;
+  }
+}
+
 .countries .radio-container input {
   -webkit-transform: translateY(1px);
           transform: translateY(1px);
@@ -133,6 +148,13 @@ p {
 .countries .radio-container label {
   margin-left: 10px;
   cursor: pointer;
+}
+
+@media screen and (max-width: 600px) {
+  .countries .radio-container label {
+    display: inline-block;
+    width: 100px;
+  }
 }
 
 .countries input[type="text"] {
